lavet section om og indsat pris

--- a/menu.html
+++ b/menu.html
@@ -74,21 +74,23 @@
 
                 <div class="container">
 
-                    <div class="row col-sm-12 col-sm-offset-2">
-
-
+                    <section class="row  produktliste">
+                        <!--Her skal produkter ligges ind-->
                         <!--Russisk ringbrød-->
 
-                        <div class="col-sm-5">Russisk ringbrød med vindruer.........................................</div>
+                        <div class="col-md-7">
+
+                            <h5 class="data_navn">DATA_NAVN</h5><span class="pris">39</span>.-</div>
 
 
-                        <div class="col-sm-3">
+                        <div class="col-md-2">
                             <!-- Trigger the modal with a button -->
                             <button type="button" class="btn btn-default btn-sm " data-toggle="modal" data-target="#ringbroed">Mere om retten</button>
 
 
                         </div>
-                    </div>
+
+                    </section>
                 </div>
 
 
@@ -97,112 +99,95 @@
 
                 <div class="container">
 
-                    <div class="row col-sm-12 col-sm-offset-2">
+                    <section class="row  produktliste">
+                        <!--Her skal produkter ligges ind-->
+                        <!--rødbedecreme-->
 
-                        <!--Cabanossi med rødbedecreme-->
+                        <div class="col-md-7">
+
+                            <h5 class="data_navn">DATA_NAVN</h5><span class="pris">39</span>.-</div>
 
 
-                        <div class="col-sm-5"> Cabanossi med rødbedecreme........................................</div>
-
-
-                        <div class="col-sm-3">
+                        <div class="col-md-2">
                             <!-- Trigger the modal with a button -->
                             <button type="button" class="btn btn-default btn-sm " data-toggle="modal" data-target="#roedbedecreme">Mere om retten</button>
 
 
                         </div>
-                    </div>
 
-
-
-
-                    <div class="container">
-
-                        <div class="row col-sm-12 col-sm-offset-2">
-                            <!--Caviar bruchetta-->
-
-                            <div class="col-sm-5"> Caviar bruschetta....................................................................</div>
-
-
-                            <div class="col-sm-3">
-                                <!-- Trigger the modal with a button -->
-                                <button type="button" class="btn btn-default btn-sm " data-toggle="modal" data-target="#caviar">Mere om retten</button>
-
-
-                            </div>
-                        </div>
-                    </div>
-
-
-
-                    <div class="container">
-
-                        <div class="row col-sm-12 col-sm-offset-2">
-
-                            <!--   Baltisk bondesuppe-->
-
-                            <div class="col-sm-5">Baltisk bondesuppe..................................................................
-                            </div>
-
-
-                            <div class="col-sm-3">
-                                <!-- Trigger the modal with a button -->
-                                <button type="button" class="btn btn-default btn-sm " data-toggle="modal" data-target="#baltisk">Mere om retten</button>
-
-
-                            </div>
-                        </div>
-                    </div>
+                    </section>
+                </div>
 
 
 
 
 
-                    <div class="container">
 
-                        <div class="row col-sm-12 col-sm-offset-2">
-                            <!--   østsibirisk kålsuppe-->
+                <div class="container">
 
-                            <div class="col-sm-5">Østsibirisk kålsuppe.................................................................
-                            </div>
+                    <section class="row  produktliste">
+                        <!--Her skal produkter ligges ind-->
+                        <!--caviar-->
 
+                        <div class="col-md-7">
 
-                            <div class="col-sm-3">
-                                <!-- Trigger the modal with a button -->
-                                <button type="button" class="btn btn-default btn-sm " data-toggle="modal" data-target="#kaalsuppe">Mere om retten</button>
+                            <h5 class="data_navn">DATA_NAVN</h5><span class="pris">39</span>.-</div>
 
 
-                            </div>
-                        </div>
-                    </div>
-
-
-
-
-                    <div class="container">
-
-                        <div class="row col-sm-12 col-sm-offset-2">
-
-                            <!--   bulgarisk bondesuppe-->
-
-
-                            <div class="col-sm-5">Bulgarisk bondesuppe............................................................
-                            </div>
-
-
-                            <div class="col-sm-3">
-                                <!-- Trigger the modal with a button -->
-                                <button type="button" class="btn btn-default btn-sm " data-toggle="modal" data-target="#bulgarisksuppe">Mere om retten</button>
-
-
-                            </div>
-
+                        <div class="col-md-2">
+                            <!-- Trigger the modal with a button -->
+                            <button type="button" class="btn btn-default btn-sm " data-toggle="modal" data-target="#caviar">Mere om retten</button>
 
 
                         </div>
-                    </div>
 
-                    <!--                            container slutter for bulgarisk bondesuppe -->
+                    </section>
+                </div>
+
+
+
+                <div class="container">
+
+                    <section class="row  produktliste">
+                        <!--Her skal produkter ligges ind-->
+                        <!--   østsibirisk kålsuppe-->
+
+                        <div class="col-md-7">
+
+                            <h5 class="data_navn">DATA_NAVN</h5><span class="pris">39</span>.-</div>
+
+
+                        <div class="col-md-2">
+                            <!-- Trigger the modal with a button -->
+                            <button type="button" class="btn btn-default btn-sm " data-toggle="modal" data-target="#kaalsuppe">Mere om retten</button>
+
+
+                        </div>
+
+                    </section>
+                </div>
+
+
+
+                <div class="container">
+
+                    <section class="row  produktliste">
+                        <!--Her skal produkter ligges ind-->
+                        <!--   bulgarisk bondesuppe-->
+
+                        <div class="col-md-7">
+
+                            <h5 class="data_navn">DATA_NAVN</h5><span class="pris">39</span>.-</div>
+
+
+                        <div class="col-md-2">
+                            <!-- Trigger the modal with a button -->
+                            <button type="button" class="btn btn-default btn-sm " data-toggle="modal" data-target="#bulgarisksuppe">Mere om retten</button>
+
+
+                        </div>
+
+                    </section>
                 </div>
 
 
@@ -211,19 +196,33 @@
 
 
 
-                <h2 class="row col-sm-4 col-sm-offset-4 hovedretter">Hovedretter</h2>
 
-                <h2 class="row col-sm-4 col-sm-offset-4 Desserter">Desserter</h2>
-
-                <h2 class="row col-sm-4 col-sm-offset-4 drikkevarer">Drikkevarer</h2>
-
-                <h2 class="row col-sm-4 col-sm-offset-4 sideorders">Sideorders</h2>
 
 
             </div>
 
+            <!--                            container slutter for bulgarisk bondesuppe -->
+
+
+
+
+
+
+
+
+            <h2 class="row col-sm-4 col-sm-offset-4 hovedretter">Hovedretter</h2>
+
+            <h2 class="row col-sm-4 col-sm-offset-4 Desserter">Desserter</h2>
+
+            <h2 class="row col-sm-4 col-sm-offset-4 drikkevarer">Drikkevarer</h2>
+
+            <h2 class="row col-sm-4 col-sm-offset-4 sideorders">Sideorders</h2>
+
 
         </div>
+
+
+    </div>
     </div>
 
 
@@ -234,6 +233,9 @@
 
     <!-- Bootstrap Core JavaScript -->
     <script src="bootstrap.min.js "></script>
+
+    <script src="petrograd.js"></script>
+
 
 
     <script>
