ny midderltidig template med produkt_template

--- a/menu.html
+++ b/menu.html
@@ -71,29 +71,30 @@
             <!--alle forretter-->
             <div class="forretter">
 
+                <template id="produkt_template">
+                    <div class="container">
 
-                <div class="container">
+                        <section class="row  produktliste">
+                            <!--Her skal produkter ligges ind-->
+                            <!--Russisk ringbrød-->
 
-                    <section class="row  produktliste">
-                        <!--Her skal produkter ligges ind-->
-                        <!--Russisk ringbrød-->
+                            <div class="col-sm-7">
 
-                        <div class="col-md-7">
-
-                            <h5 class="data_navn">DATA_NAVN</h5><span class="pris">39</span>.-</div>
-
-
-                        <div class="col-md-2">
-                            <!-- Trigger the modal with a button -->
-                            <button type="button" class="btn btn-default btn-sm " data-toggle="modal" data-target="#ringbroed">Mere om retten</button>
+                                <h5 class="data_navn">DATA_NAVN...........</h5><span class="pris">39</span>.-</div>
 
 
-                        </div>
+                            <div class="col-sm-2">
+                                <!-- Trigger the modal with a button -->
+                                <button type="button" class="btn btn-default btn-sm " data-toggle="modal" data-target="#ringbroed">Mere om retten</button>
 
-                    </section>
-                </div>
+
+                            </div>
+
+                        </section>
+                    </div>
 
 
+                </template>
 
 
 
@@ -131,7 +132,7 @@
 
                         <div class="col-md-7">
 
-                            <h5 class="data_navn">DATA_NAVN</h5><span class="pris">39</span>.-</div>
+                            <h5 class="data_navn">DATA_NAVN</h5><span class="data_pris">39</span>.-</div>
 
 
                         <div class="col-md-2">
@@ -154,7 +155,7 @@
 
                         <div class="col-md-7">
 
-                            <h5 class="data_navn">DATA_NAVN</h5><span class="pris">39</span>.-</div>
+                            <h5 class="data_navn">DATA_NAVN</h5><span class="data_pris">39</span>.-</div>
 
 
                         <div class="col-md-2">
@@ -177,7 +178,7 @@
 
                         <div class="col-md-7">
 
-                            <h5 class="data_navn">DATA_NAVN</h5><span class="pris">39</span>.-</div>
+                            <h5 class="data_navn">DATA_NAVN</h5><span class="data_pris">39</span>.-</div>
 
 
                         <div class="col-md-2">
@@ -223,7 +224,7 @@
 
 
     </div>
-    </div>
+
 
 
 
