img sat ind i template

--- a/menu.html
+++ b/menu.html
@@ -81,7 +81,10 @@
 
                         <div class="col-sm-7">
 
-                            <h5><span class="data_navn">DATA_NAVN</span><span class="data_pris">39,-</span></h5></div>
+                            <h5><span class="data_navn">DATA_NAVN</span><span class="data_pris">39,-</span></h5>
+
+                            <img class="img-responsive data_billede" src="pics/small/baltiskbondesuppe-sm.jpg">
+                        </div>
 
 
                         <div class="col-sm-2">
